--- a/app/src/main/res/layout/profile_team.xml
+++ b/app/src/main/res/layout/profile_team.xml
@@ -27,15 +27,15 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <!--        <include-->
-        <!--            android:id="@+id/includeLudiVG"-->
-        <!--            layout="@layout/ludi_view_group"-->
+        <!--            android:id="@+id/profileTeamRosterToggleCardView"-->
+        <!--            layout="@layout/ludi_toggle_view"-->
         <!--            android:layout_width="match_parent"-->
         <!--            android:layout_height="0dp"-->
         <!--            app:layout_constraintBottom_toBottomOf="parent"-->
         <!--            app:layout_constraintEnd_toEndOf="parent"-->
         <!--            app:layout_constraintHorizontal_bias="0.0"-->
         <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@+id/includeTeamProfileCard" />-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/includeTeamProfileCard"></include>-->
 
     </io.usys.report.ui.views.LudiConstraintLayout>
 
