--- a/app/src/main/res/layout/default_full_dashboard.xml
+++ b/app/src/main/res/layout/default_full_dashboard.xml
@@ -25,7 +25,7 @@
         android:id="@+id/includeYsrListViewSports"
         layout="@layout/ludi_recycler_card_view"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="125dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
