--- a/app/src/main/res/layout/ludi_roster_view.xml
+++ b/app/src/main/res/layout/ludi_roster_view.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ludiRosterView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/transparent"
     android:orientation="vertical">
 
