--- a/app/src/main/res/layout/roster_builder_fragment.xml
+++ b/app/src/main/res/layout/roster_builder_fragment.xml
@@ -11,7 +11,7 @@
     <io.usys.report.ui.views.LudiConstraintLayout
         android:id="@+id/rosterBuilderLudiInnerConstraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,8 +102,10 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rosterBuilderLudiInnerConstraintLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/rosterBuilderLudiInnerConstraintLayout"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </io.usys.report.ui.views.LudiConstraintLayout>
