--- a/app/src/main/res/layout/ludi_recycler_card_view.xml
+++ b/app/src/main/res/layout/ludi_recycler_card_view.xml
@@ -44,7 +44,7 @@
             app:layout_constraintTop_toBottomOf="@+id/ysrTxtTitle"
             app:layout_constraintVertical_bias="0.0"
             tools:itemCount="2"
-            tools:listitem="@layout/card_note_small">
+            tools:listitem="@layout/note_view_card">
 
         </androidx.recyclerview.widget.RecyclerView>
 
