--- a/app/src/main/res/layout/player_profile_vg_fragment.xml
+++ b/app/src/main/res/layout/player_profile_vg_fragment.xml
@@ -5,8 +5,8 @@
     android:id="@+id/reviewRootCard"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    app:cardBackgroundColor="@color/ysrWindowBackground"
+    android:layout_margin="5dp"
+    app:cardBackgroundColor="#00FFFFFF"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp">
 
@@ -14,6 +14,7 @@
         android:id="@+id/playerProfileLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/border_shape"
         android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,43 +29,26 @@
                 layout="@layout/card_user_header_without_ratingbar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/btnPlayerDialogCreateEval"
+            <TextView
+                android:id="@+id/playerProfileVgNameTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="Create Evaluation"
+                android:layout_marginTop="16dp"
+                android:text="Players Name"
+                android:textColor="@color/ludiBlue"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.859"
-                app:layout_constraintStart_toEndOf="@+id/includePlayerProfileHeader"
-                app:layout_constraintTop_toBottomOf="@+id/btnPlayerDialogSendOffer" />
-
-            <Button
-                android:id="@+id/btnPlayerDialogSendOffer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Send Offer"
-                app:layout_constraintEnd_toStartOf="@+id/btnEditModePlayerProfile"
-                app:layout_constraintHorizontal_bias="0.844"
+                app:layout_constraintHorizontal_bias="0.049"
                 app:layout_constraintStart_toEndOf="@+id/includePlayerProfileHeader"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageButton
-                android:id="@+id/btnEditModePlayerProfile"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="16dp"
-                android:background="#00FFFFFF"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@android:drawable/ic_menu_preferences" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </io.usys.report.ui.views.LudiLinearLayout>
