--- a/app/src/main/res/layout/ludi_custom_attributes_list.xml
+++ b/app/src/main/res/layout/ludi_custom_attributes_list.xml
@@ -17,11 +17,12 @@
         android:id="@+id/ysrMainLayoutAddAttributeListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#00000000">
+        android:layout_marginTop="3dp"
+        android:background="@color/transparent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/ysrRecyclerAddAttribute"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -41,7 +42,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:orientation="horizontal"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
