--- a/app/src/main/res/layout/team_header_card_large.xml
+++ b/app/src/main/res/layout/team_header_card_large.xml
@@ -32,7 +32,8 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/cardTeamMediumTxtTwo"
